--- a/style.css
+++ b/style.css
@@ -1,25 +1,32 @@
-h1{
-    color: green; 
-    font-family: sans-serif;
+.gallery img{
+    width: 100%;
+}
+#menu{
+    width: 100%;
+    height: 40px;
+    background-color: cornflowerblue;
+    padding-top: 12px;
+}
+#menu a{
+    color: #ffffff;
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 800px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+#menu a:hover{
+    color: #5077bd;
+}
+h2{
+    font-family: Helvetica, sans-serif;
+    font-size: 24px;
+    color: #333333;
+    padding-top: 20px;
 }
 p{
-    color: coral;
-    font-family: fantasy;
-}
-ul{
-    list-style-image: url(images/pointer-icon/pointer-icon.png);
-}
-ol{
-    list-style-type: upper-roman;
-}
-#menu-bar a{
     font-family: Helvetica, sans-serif;
-    text-decoration: none;
-    background-color: aquamarine;
-    padding: 5px;
-}
-
-#menu-bar a:hover{
-    background-color: aqua;
-    color: #ffffff;
+    font-size: 16px;
+    color: #333333;
 }
